# felipeangelimvieira.github.io

./: .gitignore  1-c843019067edc163c47b.js  1-c843019067edc163c47b.js.map  2-20f90235a085dc8d3f6e.js  2-20f90235a085dc8d3f6e.js.map  4-101814c111c219bd5b2d.js  4-101814c111c219bd5b2d.js.map  4-a5adf20488d0f960dcbd.js  4-a5adf20488d0f960dcbd.js.map  4-ed8d3bb07584cd939071.js  4-ed8d3bb07584cd939071.js.map  8-8a527fa8b2ec5618a9c2.js  8-8a527fa8b2ec5618a9c2.js.map  CNAME  _quarto.yml  app-0eccb84dd3c6a833bc7e.js  app-0eccb84dd3c6a833bc7e.js.map  app-4dea6617908d768b1a13.js  app-4dea6617908d768b1a13.js.map  app-c19098d4eab837bbfa14.js  app-c19098d4eab837bbfa14.js.map  app-effaffa82582f1ec9f7b.js  app-effaffa82582f1ec9f7b.js.map  blog.qmd  chunk-map.json  component---src-pages-blog-js-633c417d7bee2c1596e7.js  component---src-pages-blog-js-633c417d7bee2c1596e7.js.map  component---src-pages-blog-js-9676b71b7cf6d558738f.js  component---src-pages-blog-js-9676b71b7cf6d558738f.js.map  component---src-pages-blog-js-d3b249483e861068ecf0.js  component---src-pages-blog-js-d3b249483e861068ecf0.js.map  component---src-pages-blog-js-ee2ffa1a825fa5882355.js  component---src-pages-blog-js-ee2ffa1a825fa5882355.js.map  component---src-pages-blog-js-fc409d5961be522c179c.js  component---src-pages-blog-js-fc409d5961be522c179c.js.map  component---src-pages-index-js-02708817ef5ecf44842b.js  component---src-pages-index-js-02708817ef5ecf44842b.js.map  component---src-pages-index-js-17707c1b9339345047e6.js  component---src-pages-index-js-17707c1b9339345047e6.js.map  component---src-pages-index-js-31f1c13d2f0168ce10c2.js  (+74 more)
_site/: about.html  blog.html  index.html  listings.json  search.json  sitemap.xml
app/: __init__.py  nbconvert.py
blog/: index.html
docs/: index.md  references.bib
docs_sources/: plotly.py
hello-word/: index.html
latest/: listings.json  search.json  sitemap.xml
other-post/: index.html
v0.0.1/: sitemap.xml
v0.0.2/: blog.html  robots.txt  search.json  sitemap.xml
v0.0.4/: search.json
v0.0.5/: listings.json  presentations.html  search.json
v0.0.6/: presentations.html
v0.0.7/: blog.html  presentations.html  (+1 more)
(+76 files in other folders)
