[tool.poetry]
name = "app"
version = "0.1.1"
description = ""
authors = ["Felipe Angelim <felipe.angelim@mercadolivre.com>"]
readme = "README.md"
packages = [{from="app", include = "*"}]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.4.3"
mkdocs-jupyter = "^0.24.1"
mkdocs-material = "^9.1.17"
mkdocs-nbconvert = "^0.2.1"
mkdocs-blogging-plugin = "^2.2.9"
jupyterlab = "^4.0.2"
matplotlib = "^3.7.1"
pandas = "^2.0.3"
pre-commit = "^3.3.3"
plotly = ">=4.0.0,<5.0.0"
mkdocs-simple-hooks = "^0.1.5"
bokeh = "<3"
pandas-bokeh = "^0.5.5"
mkdocs-autorefs = "^0.4.1"
mkdocs-plotly-plugin = "^0.1.2"
ipywidgets = "^8.0.6"
defusedxml = "0.6"
sktime = {version = "^0.20.0", python = "<3.12,>=3.8"}
pmdarima = "^2.0.3"
mkdocs-bibtex = "^2.11.0"
pypandoc = "^1.11"
python-markdown-math = "^0.8"
mkdocs-exclude = "^1.0.2"

[project.entry-points."mkdocs.plugins"]
nbconvert_custom = "app.nbconvert:NbConvertPlugin"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
