[tool.poetry]
name = "felipeangelimvieira-github-io"
version = "0.1.0"
description = ""
authors = ["felipeangelimvieira <felipeangelim@gmail.com>"]
readme = "README.md"
packages = [{include = "felipeangelimvieira"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
pyyaml = "^6.0.2"
pandas = "^2.2.3"
matplotlib = "^3.10.3"
prophetverse = {version = "^0.7.1", python = ">=3.11,<3.13"}
arviz = "^0.21.0"
jax = "<0.6.0"
lifelines = "^0.30.0"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
